--- a/frontend/src/app/pages/admin/assign-interview/assign-interview.html
+++ b/frontend/src/app/pages/admin/assign-interview/assign-interview.html
@@ -1,5 +1,5 @@
 <div class="dashboard-container">
-  <h2>🎯 Search Interviewers for the interview</h2>
+  <h2>🎯 Search Interviewers</h2>
 
   <div *ngIf="loading()" class="loading">⏳ Loading...</div>
   <div *ngIf="errorMessage()" class="error">{{ errorMessage() }}</div>
