Added Video call Added the History WITH THE FRONTEND AND THE BACKEND Added the email check ( if already exixts or not ) Plan is to do jwt and cookies integration for the auth

--- a/frontend/src/app/pages/admin/dashboard/dashboard.html
+++ b/frontend/src/app/pages/admin/dashboard/dashboard.html
@@ -8,6 +8,7 @@
       <a routerLink="create-candidate" routerLinkActive="active-link">👩‍🎓 Create Candidate</a>
       <a routerLink="assign-interview" routerLinkActive="active-link">🧩 Assign Interview</a>
       <a routerLink="view-assignments" routerLinkActive="active-link">📋 View Assignments</a>
+      <a routerLink="view-reports" routerLinkActive="active-link">📋 Reports</a>
     </nav>
 
     <div class="logout-section">
