--- a/frontend/src/app/pages/admin/create-interviewer/create-interviewer.html
+++ b/frontend/src/app/pages/admin/create-interviewer/create-interviewer.html
@@ -7,7 +7,7 @@
     <div *ngIf="errorMessage()" class="error">{{ errorMessage() }}</div>
 
     <form #interviewerForm="ngForm" (ngSubmit)="onSubmit(interviewerForm)">
-      <!-- 🧑 Name -->
+      <!-- Name -->
       <div class="input-group">
         <label>Full Name</label>
         <input
