--- a/frontend/src/app/pages/auth/login/login.html
+++ b/frontend/src/app/pages/auth/login/login.html
@@ -46,6 +46,7 @@
           <option value="">Select Role</option>
           <option value="Candidate">Candidate</option>
           <option value="Interviewer">Interviewer</option>
+          <option value="Admin">Admin</option>
         </select>
       </div>
 
