--- a/frontend/src/app/pages/auth/login/login.css
+++ b/frontend/src/app/pages/auth/login/login.css
@@ -73,7 +73,7 @@
   padding-right: 42px; 
 }
 
-.toggle-eye {
+/* .toggle-eye {
   position: absolute;
   top: 50%;
   right: 12px;
@@ -83,11 +83,29 @@
   font-size: 20px;
   user-select: none;
   transition: color 0.3s ease, transform 0.2s ease;
+} */
+
+ /*toggle eye fixed */
+ .toggle-eye {
+  position: absolute;
+  right: 12px;
+  top: 20px;
+  bottom: 0;
+  margin: auto;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+  color: #777;
+  transition: color 0.3s ease, transform 0.2s ease;
 }
 
 .toggle-eye:hover {
   color: #007bff;
-  transform: translateY(-50%) scale(1.15);
+  transform: translateY(-10%) scale(1);
 }
 
 button {
