interviewer done without email service

--- a/frontend/src/app/pages/interviewer/interviewer-dashboard/interviewer-dashboard.html
+++ b/frontend/src/app/pages/interviewer/interviewer-dashboard/interviewer-dashboard.html
@@ -8,6 +8,7 @@
       <a routerLink="interviewer-home" routerLinkActive="active-link">🏠 Dashboard</a>
       <a routerLink="assigned-interviews" routerLinkActive="active-link">📌 Assigned Interviews</a>
       <a routerLink="upcoming-interviews" routerLinkActive="active-link">⏳ Upcoming Interviews</a>
+      <a routerLink="completed-interviews" routerLinkActive="active-link">✅ Completed Interviews</a>
     </nav>
 
     <div class="logout-section">
