--- a/frontend/src/app/pages/admin/dashboard/dashboard.html
+++ b/frontend/src/app/pages/admin/dashboard/dashboard.html
@@ -9,6 +9,7 @@
       <a routerLink="assign-interview" routerLinkActive="active-link">🧩 Assign Interview</a>
       <a routerLink="view-assignments" routerLinkActive="active-link">📋 View Assignments</a>
       <a routerLink="view-reports" routerLinkActive="active-link">📋 Reports</a>
+      <a routerLink="offer-letter" routerLinkActive="active-link">📄 Offer Letter</a>
     </nav>
 
     <div class="logout-section">
