Final logic changes

--- a/frontend/src/app/pages/admin/admin-candidates/admin-candidates.html
+++ b/frontend/src/app/pages/admin/admin-candidates/admin-candidates.html
@@ -21,6 +21,7 @@
       </div>
 
       <div class="card-body">
+        <p><strong>Id: </strong>{{ c.id }}</p>
         <p><strong>Email:</strong> {{ c.email }}</p>
         <p><strong>Skill:</strong> {{ c.skillSet }}</p>
         <p><strong>Experience:</strong> {{ c.experienceYears }} years</p>
